plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'  // Code coverage
	id 'org.owasp.dependencycheck' version '9.0.9'  // Security vulnerability check
}

group = 'com.drtx.ecomerce'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	mapstructVersion = '1.5.5.Final'
	jjwtVersion = '0.12.3'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.azure:azure-communication-email:1.0.15'
	implementation 'com.azure:azure-storage-blob:12.25.1'
	
	// Commons
	implementation 'org.apache.commons:commons-lang3:3.14.0'
	
	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	
	// MapStruct
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	
	// JWT
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

	// DB
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-core:9.22.3'
	
	// DevTools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	// Annotation Processors (Lombok + MapStruct binding)
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    // If you need lombok validation binding or additional bindings, sometimes mapstruct-binding is needed, 
    // but usually mapstruct-processor is enough if placed after lombok (Gradle handles order automatically mostly, 
    // but good to keep in mind).
    // In Gradle 5+, annotation processor path is strict.
    // The Lombok-Mapstruct binding is often resolved by just having both.
    // However, for recent versions, we might need lombok-mapstruct-binding if we used it, 
    // but the pom didn't explicitly show it, just the order in maven-compiler-plugin.
    // In Gradle, we just declare them.
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.graphql:spring-graphql-test'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
    
    // Load .env variables for tests
    doFirst {
        def envFile = file("${project.rootDir}/.env")
        if (envFile.exists()) {
            envFile.eachLine { line ->
                if (line.trim() && !line.startsWith('#') && line.contains('=')) {
                    def parts = line.split('=', 2)
                    def key = parts[0].trim()
                    def value = parts[1].trim()

                     // Handle quoted values
                    if ((value.startsWith('"') && value.endsWith('"')) || (value.startsWith("'") && value.endsWith("'"))) {
                        value = value.substring(1, value.length() - 1)
                    }
                    environment key, value
                }
            }
        }
    }
}

tasks.named('bootRun') {
    // Load .env variables for application run
    doFirst {
        if (file("${project.rootDir}/.env").exists()) {
            file("${project.rootDir}/.env").readLines().each { line ->
                if (line.trim() && !line.startsWith('#') && line.contains('=')) {
                    // Split only on the first equals sign
                    def parts = line.split('=', 2)
                    def key = parts[0].trim()
                    def value = parts[1].trim()
                    
                    // Handle quoted values
                    if ((value.startsWith('"') && value.endsWith('"')) || (value.startsWith("'") && value.endsWith("'"))) {
                        value = value.substring(1, value.length() - 1)
                    }
                    
                    environment key, value
                }
            }
        }
    }
}

// ==================== JACOCO COVERAGE ====================
jacoco {
    toolVersion = '0.8.11'
}

tasks.named('test') {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

tasks.named('jacocoTestReport') {
    dependsOn test // tests are required to run before generating the report

    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn test

    violationRules {
        rule {
            limit {
                minimum = 0.60  // 60% coverage minimum
            }
        }

        rule {
            element = 'CLASS'
            excludes = [
                '**.config.**',
                '**.dto.**',
                '**.mapper.**',
                '**.entity.**',
                '*.*Application',
                '**.exception.**'
            ]

            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.50
            }
        }
    }
}

// ==================== OWASP DEPENDENCY CHECK ====================
dependencyCheck {
    format = 'HTML'
    failBuildOnCVSS = 7  // Fail build if CVSS score >= 7 (High severity)
    suppressionFile = file("${project.rootDir}/owasp-suppressions.xml").exists()
        ? "${project.rootDir}/owasp-suppressions.xml"
        : null

    analyzers {
        assemblyEnabled = false
        nugetconfEnabled = false
        nuspecEnabled = false
    }

    skipConfigurations = ['compileOnly', 'testCompileOnly', 'developmentOnly']
}


